--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,26 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
+  background-color: #c92370;
+  background-image: linear-gradient(43deg, #c92370 0%, #c325b9 46%, #c570ff 100%);  
+  background-size: 400% 400%;
+  animation: gradient 8s ease infinite;
+  height: 100vh;
+
+
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 a {
