--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap');
+
 html,
 body {
   padding: 0;
@@ -8,10 +10,8 @@ body {
   background-color: #c92370;
   background-image: linear-gradient(43deg, #c92370 0%, #c325b9 46%, #c570ff 100%);  
   background-size: 400% 400%;
-  animation: gradient 8s ease infinite;
+  animation: gradient 12s ease infinite;
   height: 100vh;
-
-
 }
 
 @keyframes gradient {
